RESOLVED FIXED105056
[WK2 NetworkProcess] NetworkProcess loads may get stuck when WebProcess quits
https://bugs.webkit.org/show_bug.cgi?id=105056
Summary [WK2 NetworkProcess] NetworkProcess loads may get stuck when WebProcess quits
Alexey Proskuryakov
Reported 2012-12-14 14:54:28 PST
Attachments
proposed fix (11.76 KB, patch)
2012-12-14 15:07 PST, Alexey Proskuryakov
webkit-ews: commit-queue-
with build fix (11.77 KB, patch)
2012-12-14 15:14 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2012-12-14 15:07:56 PST
Created attachment 179537 [details] proposed fix
Early Warning System Bot
Comment 2 2012-12-14 15:13:27 PST
Comment on attachment 179537 [details] proposed fix Attachment 179537 [details] did not pass qt-wk2-ews (qt): Output: http://queues.webkit.org/results/15311847
Alexey Proskuryakov
Comment 3 2012-12-14 15:14:37 PST
Created attachment 179538 [details] with build fix
Alexey Proskuryakov
Comment 4 2012-12-14 15:38:37 PST
Note You need to log in before you can comment on or make changes to this bug.