Source/WebKit2/Shared/BlockingResponseMap.h
@@ -33,11 +33,18 @@
 
 template<typename T>
 class BlockingResponseMap {
+WTF_MAKE_NONCOPYABLE(BlockingResponseMap);
 public:
+    BlockingResponseMap() : m_canceled(false) { }
+    ~BlockingResponseMap() { ASSERT(m_responses.isEmpty()); }
+
     PassOwnPtr<T> waitForResponse(uint64_t requestID)
     {
         while (true) {
             MutexLocker locker(m_mutex);
+
+            if (m_canceled)
+                return nullptr;
 
             if (OwnPtr<T> response = m_responses.take(requestID))
                 return response.release();
@@ -54,7 +61,15 @@ public:
         ASSERT(!m_responses.contains(requestID));
 
         m_responses.set(requestID, response);
-        // FIXME (NetworkProcess): Waking up all threads is quite inefficient.
+        // FIXME (NetworkProcess): <rdar://problem/12886430>: Waking up all threads is quite inefficient.
+        m_condition.broadcast();
+    }
+
+    void cancel()
+    {
+        m_canceled = true;
+
+        // FIXME (NetworkProcess): <rdar://problem/12886430>: Waking up all threads is quite inefficient.
         m_condition.broadcast();
     }
 
@@ -63,14 +78,23 @@ private:
     ThreadCondition m_condition;
 
     HashMap<uint64_t, OwnPtr<T> > m_responses;
+    bool m_canceled;
 };
 
 class BlockingBoolResponseMap {
+WTF_MAKE_NONCOPYABLE(BlockingBoolResponseMap);
 public:
+    BlockingBoolResponseMap() : m_canceled(false) { }
+    ~BlockingBoolResponseMap() { ASSERT(m_responses.isEmpty()); }
+
     bool waitForResponse(uint64_t requestID)
     {
         while (true) {
             MutexLocker locker(m_mutex);
+
+            // FIXME: Differentiate between canceled wait and a negative response.
+            if (m_canceled)
+                return false;
 
             HashMap<uint64_t, bool>::iterator iter = m_responses.find(requestID);
             if (iter != m_responses.end()) {
@@ -91,7 +115,15 @@ public:
         ASSERT(!m_responses.contains(requestID));
 
         m_responses.set(requestID, response);
-        // FIXME (NetworkProcess): Waking up all threads is quite inefficient.
+        // FIXME (NetworkProcess): <rdar://problem/12886430>: Waking up all threads is quite inefficient.
+        m_condition.broadcast();
+    }
+
+    void cancel()
+    {
+        m_canceled = true;
+
+        // FIXME (NetworkProcess): <rdar://problem/12886430>: Waking up all threads is quite inefficient.
         m_condition.broadcast();
     }
 
@@ -100,6 +132,7 @@ private:
     ThreadCondition m_condition;
 
     HashMap<uint64_t, bool> m_responses;
+    bool m_canceled;
 };
 
 #endif // BlockingResponseMap_h
